Removed urls chart to fix overlap for pres version.

--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -250,25 +250,6 @@
     }
   }
 
-  .slide-links .slide-content {
-    position: absolute;
-    top: 50px;
-    left: 500px;
-    right: 0;
-    bottom: 0;
-    h2 {
-      position: absolute;
-      top: 75px;
-      left: 0;
-    }
-    .urls {
-      position: absolute;
-      top: 200px;
-      left: 0;
-    }
-  }
-
-
   .slide-summary .slide-content {
     padding-left: 100px;
     position: absolute;
